# testovoe

task0_wasm/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  draw.c  justfile  shell.html  textsdl2.c
task1_sql_cars/: README.md  create_tables.sql  insert_data.sql  queries.sql
